fixed chat panel z-index

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -163,3 +163,6 @@
   padding: 7px;
 }
 
+.gitter-chat-embed{
+  z-index:9000;
+}
